samples/_failures_safe/1761261794_0550be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d78aecf.c: In function ‘main’:
./samples/SAFE/__tmp_2d78aecf.c:159:17: error: expected declaration or statement at end of input
  159 |                 continue;
      |                 ^~~~~~~~
./samples/SAFE/__tmp_2d78aecf.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d78aecf.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d78aecf.c:159:17: error: expected declaration or statement at end of input
